[gd_scene load_steps=40 format=2]

[ext_resource path="res://Enemies/Keesee/Keesee.png" type="Texture" id=1]
[ext_resource path="res://Enemies/State_Machine.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Boko/Move.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Boko/Idle.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Keesee/Attack.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Slash_Effect_Frames.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Helpers/Sprite_Handler.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Hit.gd" type="Script" id=8]
[ext_resource path="res://Enemies/Monster_UI.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/Monster_Effects.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemies/Boko/Slash_Hitbox.gd" type="Script" id=11]
[ext_resource path="res://Enemies/Keesee/Keesee_Attack_Trail.tscn" type="PackedScene" id=12]
[ext_resource path="res://Enemies/Sprite.gd" type="Script" id=13]
[ext_resource path="res://Enemies/Die.gd" type="Script" id=14]
[ext_resource path="res://Enemies/Keesee/Keesee_eyes.png" type="Texture" id=15]
[ext_resource path="res://Enemies/Keesee/Eyes.gd" type="Script" id=16]
[ext_resource path="res://Enemies/AI_Move.gd" type="Script" id=17]
[ext_resource path="res://Enemies/Death_Right.tres" type="Animation" id=18]
[ext_resource path="res://Enemies/Death_Left.tres" type="Animation" id=19]
[ext_resource path="res://Enemies/Hat.tscn" type="PackedScene" id=20]
[ext_resource path="res://Enemies/Move_Particles.tscn" type="PackedScene" id=21]
[ext_resource path="res://Helpers/Target_Point.tscn" type="PackedScene" id=22]
[ext_resource path="res://Enemies/States/AI_Run.tscn" type="PackedScene" id=23]
[ext_resource path="res://Enemies/Components/Component_Manager.tscn" type="PackedScene" id=26]
[ext_resource path="res://Enemies/Components/Component_Flying.tscn" type="PackedScene" id=27]
[ext_resource path="res://Enemies/Components/Component_Dance.tscn" type="PackedScene" id=28]
[ext_resource path="res://Enemies/Components/Component_AI_Follow.tscn" type="PackedScene" id=31]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 7, 0, 7, 7 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 15 )
region = Rect2( 7, 0, 7, 7 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=8]
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Slash_Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Slash_Hitbox/Slash_Effect2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.175 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 0.6 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 7.13169
height = 2.58179

[sub_resource type="Animation" id=10]
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("../Sprite_Handler")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "flash_on"
}, {
"args": [  ],
"method": "flash_off"
} ]
}

[sub_resource type="Animation" id=11]
length = 0.5

[sub_resource type="Animation" id=12]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0, 0.0 ]
}

[node name="Keesee" type="KinematicBody2D" groups=["Directional_Attacker", "Monster"]]
scale = Vector2( 5, 5 )
collision_layer = 2
collision_mask = 23
script = ExtResource( 2 )
START_STATE = NodePath("States/Idle")
monster_type = "keesee"

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0.5, 1.5 )
collision_layer = 2
collision_mask = 5

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.5, -1.5 )
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Target_Point" parent="." instance=ExtResource( 22 )]

[node name="Components" parent="." instance=ExtResource( 26 )]

[node name="Flying" parent="Components" instance=ExtResource( 27 )]

[node name="Dance" parent="Components" instance=ExtResource( 28 )]
dance_anim_type = 1

[node name="AI_Follow" parent="Components" instance=ExtResource( 31 )]

[node name="Sprite_Handler" parent="." instance=ExtResource( 7 )]

[node name="UI" parent="." instance=ExtResource( 9 )]

[node name="Effects" parent="." instance=ExtResource( 10 )]
move_particle = {
"active": false,
"name": "Move_Particles",
"particle_scene": ExtResource( 21 )
}
shadow = {
"active": true,
"offset": Vector2( 0, 5 ),
"scale": Vector2( 0.5, 1 )
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.5, 1.5 )
frames = SubResource( 4 )
frame = 1
speed_scale = 1.3
playing = true
script = ExtResource( 13 )

[node name="Eyes" type="AnimatedSprite" parent="Sprite"]
visible = false
frames = SubResource( 7 )
script = ExtResource( 16 )

[node name="Slash_Effect" type="AnimatedSprite" parent="Sprite" groups=["No_Flash"]]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
z_index = 50
z_as_relative = false
frames = ExtResource( 6 )
animation = "Double"
frame = 2
speed_scale = 4.0

[node name="Slash_Animation" type="AnimationPlayer" parent="Sprite/Slash_Effect"]
anims/Slash = SubResource( 8 )

[node name="Slash_Hitbox" type="Area2D" parent="Sprite/Slash_Effect" groups=["Monster_Hitbox"]]
position = Vector2( 8, 0 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Slash_Effect/Slash_Hitbox"]
scale = Vector2( 0.392614, 0.525361 )
shape = SubResource( 9 )

[node name="Slash_Effect2" type="AnimatedSprite" parent="Sprite/Slash_Effect/Slash_Hitbox" groups=["No_Flash"]]
position = Vector2( -4, 0 )
z_index = 50
z_as_relative = false
frames = ExtResource( 6 )
animation = "Double"
speed_scale = 4.0
offset = Vector2( 2, 0 )

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
anims/Death_Left = ExtResource( 19 )
anims/Death_Right = ExtResource( 18 )
anims/Hit = SubResource( 10 )
anims/Idle = SubResource( 11 )
anims/Move = SubResource( 12 )

[node name="Hat" parent="Sprite" instance=ExtResource( 20 )]
position = Vector2( -0.5, -4 )
frame = 1
speed_scale = 1.3
playing = true

[node name="Trail" parent="." instance=ExtResource( 12 )]
show_behind_parent = true

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 4 )
on_enter = {
"animate_shadow": true,
"animation": "",
"reset_frame": true
}

[node name="Move" type="Node" parent="States"]
script = ExtResource( 3 )
MAX_MOVESPEED = 170.0

[node name="AI_Run" parent="States" instance=ExtResource( 23 )]

[node name="AI_Move" type="KinematicBody2D" parent="States"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 17 )

[node name="Seek_Collision_Mask" type="Area2D" parent="States/AI_Move"]
collision_layer = 0
collision_mask = 2

[node name="Run_Cooldown" type="Timer" parent="States/AI_Move"]
wait_time = 4.0
one_shot = true

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 5 )
ATTACK_MOVE_SPEED = 650

[node name="Cooldown_Timer" type="Timer" parent="States/Attack"]
wait_time = 0.1
one_shot = true

[node name="Hit" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Cooldown" type="Timer" parent="States/Hit"]
wait_time = 0.5
one_shot = true

[node name="Die" type="Node" parent="States"]
script = ExtResource( 14 )

[connection signal="animation_finished" from="Sprite/Animation" to="." method="_on_animation_finished"]
[connection signal="timeout" from="States/AI_Move/Run_Cooldown" to="States/AI_Move" method="_on_Run_Cooldown_timeout"]
[connection signal="timeout" from="States/Attack/Cooldown_Timer" to="States/Attack" method="_on_Cooldown_Timer_timeout"]
[connection signal="timeout" from="States/Hit/Cooldown" to="States/Hit" method="_on_Cooldown_timeout"]
